external-crates/move/crates/move-package-alt/tests/data/invalid_external_multiple/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/invalid_external_multiple/Move.toml"`
  ┌─ "tests/data/invalid_external_multiple/Move.toml":2:7
  │
2 │ foo = { r.mvr = "a", r.ext = "b" }
  │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │
  = Externally resolved dependencies may only have one `r.<resolver>` field
